# mempal

./: .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
crates/mempal-aaak/: Cargo.toml
crates/mempal-aaak/src/: codec.rs  model.rs  parse.rs  spec.rs
crates/mempal-aaak/tests/: aaak_test.rs
crates/mempal-api/: Cargo.toml
crates/mempal-api/src/: handlers.rs  state.rs
crates/mempal-api/tests/: api_test.rs
crates/mempal-cli/: Cargo.toml
crates/mempal-cli/src/: longmemeval.rs  main.rs
crates/mempal-cli/tests/: cli_test.rs
crates/mempal-core/: Cargo.toml
crates/mempal-core/src/: db.rs  protocol.rs  types.rs  utils.rs
crates/mempal-core/tests/: db_test.rs  types_test.rs
crates/mempal-embed/: Cargo.toml
crates/mempal-embed/src/: api.rs  factory.rs  lib.rs  onnx.rs
crates/mempal-embed/tests/: embed_test.rs
crates/mempal-ingest/: Cargo.toml
crates/mempal-ingest/src/: chunk.rs  detect.rs  lib.rs  normalize.rs
crates/mempal-ingest/tests/: ingest_test.rs  pipeline_test.rs
crates/mempal-mcp/: Cargo.toml
crates/mempal-mcp/src/: server.rs  tools.rs
crates/mempal-mcp/tests/: mcp_test.rs
crates/mempal-search/: Cargo.toml
crates/mempal-search/src/: lib.rs
crates/mempal-search/tests/: route_test.rs  search_test.rs
docs/: MIND-MODEL-DESIGN.md  usage.md
docs/plans/: 2026-04-23-p11-transcript-noise-strip-implementation.md  2026-04-24-p11-chunk-neighbors-implementation.md  2026-04-27-p35-knowledge-card-mcp-read-implementation.md  2026-04-27-p36-knowledge-card-backfill-report-implementation.md  2026-04-27-p37-knowledge-card-backfill-apply-implementation.md  2026-04-27-p38-p42-knowledge-card-runtime-implementation.md  2026-04-28-p43-knowledge-card-retrieval-contract.md  2026-04-28-p44-card-context-assembler.md  2026-04-28-p45-card-linked-evidence-retrieval.md  2026-04-28-p46-card-context-default-policy.md  2026-04-28-p47-card-embedding-policy.md  2026-04-29-p48-card-audit-policy.md  2026-04-29-p49-research-ingestion-policy.md  2026-04-29-p50-evaluator-promotion-policy.md  2026-04-29-p51-mind-model-closure-audit.md
docs/specs/: 2026-04-08-mempal-design.md
hooks/: mempal_precompact_hook.sh  mempal_save_hook.sh
specs/: p35-knowledge-card-mcp-read.spec.md  p36-knowledge-card-backfill-report.spec.md  p37-knowledge-card-backfill-apply.spec.md  p38-knowledge-card-gate.spec.md  p39-knowledge-card-lifecycle-cli.spec.md  p40-mcp-knowledge-card-lifecycle.spec.md  p41-knowledge-card-runtime-boundary.spec.md  p42-mind-model-completion-audit.spec.md  p43-knowledge-card-retrieval-contract.spec.md  p44-card-context-assembler.spec.md  p45-card-linked-evidence-retrieval.spec.md  p46-card-context-default-policy.spec.md  p47-card-embedding-policy.spec.md  p48-card-audit-policy.spec.md  p49-research-ingestion-policy.spec.md  p50-evaluator-promotion-policy.spec.md  p51-mind-model-closure-audit.spec.md
src/: context.rs  knowledge_card_backfill.rs  knowledge_card_lifecycle.rs  knowledge_card_retrieval.rs  lib.rs  longmemeval.rs  main.rs
src/api/: handlers.rs
src/core/: anchor.rs  db.rs  mod.rs  protocol.rs  types.rs  utils.rs
src/cowork/: claude.rs  codex.rs  inbox.rs  peek.rs
src/ingest/: mod.rs
src/mcp/: server.rs  tools.rs
src/search/: filter.rs  mod.rs
tests/: context_assembler.rs  cowork_inbox.rs  cowork_peek.rs  knowledge_card_backfill.rs  knowledge_card_cli.rs  knowledge_card_retrieval.rs  knowledge_lifecycle.rs  mind_model_bootstrap.rs  noise_strip.rs  normalize_version.rs  search_neighbors.rs  tunnels_explicit.rs
tests/fixtures/cowork/claude/: session.jsonl  session_with_tools.jsonl
