[package]
name = "mempal-aaak"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "AAAK output codec and parser for mempal."
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
rust-version.workspace = true
readme = "../../README.md"

[dependencies]
bimap.workspace = true
jieba-rs = "0.8"
mempal-core = { path = "../mempal-core", version = "0.1.0" }
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
serde_json.workspace = true
