[package]
name = "mempal-core"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
sqlite-vec.workspace = true
thiserror.workspace = true
toml.workspace = true

[dev-dependencies]
anyhow.workspace = true
rusqlite.workspace = true
tempfile.workspace = true
