[package]
name = "mempal-core"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "Core data types, SQLite storage, and taxonomy utilities for mempal."
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
rust-version.workspace = true
readme = "../../README.md"

[dependencies]
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
sqlite-vec.workspace = true
thiserror.workspace = true
toml.workspace = true

[dev-dependencies]
anyhow.workspace = true
rusqlite.workspace = true
tempfile.workspace = true
