[package]
name = "mempal-ingest"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
mempal-core = { path = "../mempal-core" }
mempal-embed = { path = "../mempal-embed" }
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
async-trait.workspace = true
tempfile.workspace = true
