[package]
name = "mempal-ingest"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "Ingest pipeline for mempal: detect, normalize, chunk, and store project memory."
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
rust-version.workspace = true
readme = "../../README.md"

[dependencies]
mempal-core = { path = "../mempal-core", version = "0.1.0" }
mempal-embed = { path = "../mempal-embed", version = "0.1.0" }
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
async-trait.workspace = true
tempfile.workspace = true
