[package]
name = "mempal-mcp"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
mempal-aaak = { path = "../mempal-aaak" }
mempal-core = { path = "../mempal-core" }
mempal-embed = { path = "../mempal-embed" }
mempal-search = { path = "../mempal-search" }
rmcp.workspace = true
serde.workspace = true

[dev-dependencies]
async-trait.workspace = true
serde_json.workspace = true
tempfile.workspace = true
tokio.workspace = true
