[package]
name = "mempal-mcp"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "MCP server for mempal project memory."
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
rust-version.workspace = true
readme = "../../README.md"

[dependencies]
anyhow.workspace = true
mempal-aaak = { path = "../mempal-aaak", version = "0.1.0" }
mempal-core = { path = "../mempal-core", version = "0.1.0" }
mempal-embed = { path = "../mempal-embed", version = "0.1.0" }
mempal-search = { path = "../mempal-search", version = "0.1.0" }
rmcp.workspace = true
serde.workspace = true

[dev-dependencies]
async-trait.workspace = true
serde_json.workspace = true
tempfile.workspace = true
tokio.workspace = true
