[package]
name = "mempal-search"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
mempal-core = { path = "../mempal-core" }
mempal-embed = { path = "../mempal-embed" }
rusqlite.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
async-trait.workspace = true
serde_json.workspace = true
tempfile.workspace = true
tokio.workspace = true
