[package]
name = "mempal-search"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "Vector search and routing for mempal."
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
rust-version.workspace = true
readme = "../../README.md"

[dependencies]
mempal-core = { path = "../mempal-core", version = "0.1.0" }
mempal-embed = { path = "../mempal-embed", version = "0.1.0" }
rusqlite.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
async-trait.workspace = true
serde_json.workspace = true
tempfile.workspace = true
tokio.workspace = true
